# comprime

./: .gitignore  README.md  meson.build
build-aux/: fr.benjaminbellamy.comprime.json
data/: fr.benjaminbellamy.comprime.desktop  fr.benjaminbellamy.comprime.gschema.xml  fr.benjaminbellamy.comprime.metainfo.xml  meson.build
src/: application.vala  comprime.gresource.xml  encoder.vala  main.vala  meson.build  quality.vala  window.vala
src/ui/: window.ui
